--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -4,7 +4,6 @@
     padding:0;
 }
 
-
 header {
     background-color: #08BC5A;
     border-radius: 0 0 40px 40px;
@@ -21,10 +20,10 @@ header {
 }
 
 .icono{
-    height: 5vh;
+    height: 7vw;
 }
 .icono-pequeno{
-    height:3vh;
+    height:5vw;
 }
 
 .header-top{
@@ -46,11 +45,11 @@ header {
     border-radius: 50%;
    -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
-    height:5vh;
-    width: 5vh;
-    position:absolute;
-    top:3vh;
-    right:6.5vh;
+    height:7vw;
+    width: 7vw;
+    position:relative;
+    top:3vw;
+    right:3vw;
  }
 
  .blanco-negrita{
@@ -66,24 +65,22 @@ header {
 
 .container-buscador{
     width: 100%;
-    vertical-align: middle;
-    white-space: nowrap;
     position: relative;
     margin: 5px 0;
-    border-radius: 50px;
+    display: flex;
 }
+
 .container-buscador input#search{
     width: 100%;
-    height: 50px;
-    background-color: #FFFFFF;
+    height: 30px;
     border: none;
-    font-size: 10pt;
-    float: left;
-    color: #ebecee;
-    padding-left: 45px;
+    font-size: 10px;
+    padding-left: 25px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;
+    border-radius: 20px;
+    background-color: #FFFFFF;
+    color: #ebecee;
 }
 
 /* Averiguar por qué es necesario usar placeholder para cada navegador... o si es viejo.. */
@@ -100,24 +97,14 @@ header {
     color: #65737e;  
  }
   
- .ccontainer-buscador input#search:-ms-input-placeholder {  
+ .container-buscador input#search:-ms-input-placeholder {  
     color: #65737e;  
  }
 
  .container-buscador .icon{
-    position: absolute;
-    top: 50%;
-    right:2%;
-    margin-right: 17px;
-    margin-top: 17px;
+    position:absolute;
+    left:90%;
+    top:13%;
     z-index: 1;
     color: #4f5b66;
   }
-/*
-<div class="box">
-<div class="container-3">
-    <span class="icon"><img class="icono-pequeno" src="./img/search-icon.svg"></span>
-    <input type="search" id="search" placeholder="Search..." />
-</div>
-</div>
-*/
