--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -2,7 +2,7 @@
 /* Estructura */    
     --default-border-radious: 1rem;
     --default-padding: .5rem;
-    --defult-margin: .5rem;
+    --default-margin: .5rem;
 
 /* Colores */
     --default-background: #EFEFEF;
@@ -10,6 +10,7 @@
     --red:#FF0000;
     --blue: #0067B8;
     --default-dark: #101010;
+    --grey: #A8A8A8;
 
     --default-primary-color-light:#25EB7F;
     --default-primary-color-dark:#178046;
@@ -190,7 +191,7 @@ header {
 
 .catalogo-header{
     display: flexbox;
-    margin:var(--defult-margin);
+    margin:var(--default-margin);
 }
 .catalogo-header-titulo{
     font-size: var(--font-size-title);
@@ -203,7 +204,7 @@ header {
     top:15px;
 }
 .catalogo-contenedor{
-    margin-left: calc(var(--defult-margin)/2);
+    margin-left: calc(var(--default-margin)/2);
     display:flex;
     flex-direction: row;
     overflow: auto;
@@ -211,6 +212,8 @@ header {
 .producto-contenedor{
     background-color: #fff;
     margin: 2px;
+    width: 170px;
+    margin-right: var(--default-margin);
 }
 .producto-header {
     z-index: 2;
@@ -224,18 +227,68 @@ header {
     font-size: var(--font-size-primary);
     display: inline-block;
     padding:calc(var(--default-padding)/2) var(--default-padding);
+    text-align: center;
 }
 .producto-favorito{
     color: red;
     font-size: var(--font-size-title);
 }
 .producto-imagen{
-    position:relative;
-    bottom: 10px;
+    width:150px;
+    margin:0 auto;
 }
 .producto-imagen img{
     max-width:150px;
-    height:130px;
+    max-height:130px;
+}
+.producto-footer{
+
+}
+.producto-detalle{
+    font-size: var(--font-size-primary);
+    height: calc(var(--font-size-primary)*2+2px);
+    font-weight: bold;
+    margin:0;
+}
+.producto-presentacion{
+    font-size: var(--font-size-secondary);
+    color:var(--grey);
+    float: right;
+    bottom: 40px;
+    margin:0;
+}
+.producto-precios{
+    height: 3rem;
+}
+.precio-nuestro{
+    font-size: var(--font-size-primary-subtitle);
+    color:var(--default-primary-color);
+    font-weight: bold;
+    width: 4rem;
+    text-align: center;
+    display:inline-block;
+}
+.precio-competencia{
+    font-size: var(--font-size-primary);
+    color:var(--red);
+    font-weight: bold;
+    text-decoration: line-through;
+    width: 2.5rem;
+    text-align: center;
+    display:inline-block;
 }
 
+.producto-agregar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    background-color: var(--default-dark);
+    color:white;
+    border-radius: 1rem;
+    overflow: hidden;
+    height: 2rem;
+    width: 80%;
+    margin: 0 auto;
+}
 /*Fin Estilo para el home-showroom */
