agregando Rutas-Controladores

--- a/site/src/views/login.ejs
+++ b/site/src/views/login.ejs
@@ -1,28 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markefy</title>
-    <link rel="stylesheet" type="text/css" href="./css/login.css">
-    
-</head>
+<%- include('./partials/head') %>
 
 <body>
-    <!----------------cabecera--------->
-    <header> 
-        <img class='icono' src="./img/menu-button-modificado.png">
-        <div id='texto-cabecera' class='pad-L-2 pad-R-2'>Comprar por categoría </div>
-        <div id='iconos-header' class='float-derecha'>
-            <img class='icono pad-L-2' src="./img/lupa-buscar.png">
-            <img class='icono pad-L-2' src='./img/carrito-modificado.png'> 
-        </div>
-        
-        
-    </header>
-
-
+    <%- include('./partials/header') %>
 
     <div class="contenedor">
         <div class="titulo">
