--- a/site/src/views/registro.ejs
+++ b/site/src/views/registro.ejs
@@ -1,26 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="./css/registro.css">
-		<title> Registrate en nuestra pagina </title>
-	</head>
-  <body>
-     <!----------------cabecera--------->
-    <header> 
-      <img class='icono' src="./img/menu-button-modificado.png">
-      <div id='texto-cabecera' class='pad-L-2 pad-R-2'>Comprar por categoría </div>
-      <div id='iconos-header' class='float-derecha'>
-          <img class='icono pad-L-2' src="./img/lupa-buscar.png">
-          <img class='icono pad-L-2' src='./img/carrito-modificado.png'> 
-      </div>
-      
-      
-  </header>
-  
-  <!------------------------->
 
+  <%- include('./partials/head') %>
+  <body>
+    <%- include('./partials/header') %>
+  
     <div class="contenedor">
       
       <!----------------bienvenida -------->
