--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
     <div id="container-header">
         <div id="header-top">
-            <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="./img/menu-icon.svg"></div>
+            <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="../img/menu-icon.svg"></div>
             <div id="espacio-logo"><span id="logo">Marketfy</span></div>
             <div id="carrito">
                 <div class="total-carrito"> $120.322</div>
