--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <%- include('./partials/head') %>
+  <%- include('./../partials/head') %>
   <body>
-    <%- include('./partials/header') %>
+    <%- include('./../partials/header') %>
   
     <div class="contenedor">
       
