--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head') %>
+    <%- include('./../partials/head') %>
 <body>
-    <%- include('./partials/header') %>
+    <%- include('./../partials/header') %>
     <div id="carritoYcheckbox">
         <div id="carritoListaYtotal" class="carritoListaYtotal" >
             <div class="productosEnCarrito">
                 <div class="contenedorProducto">
                     <div class="carrito-item-descripcion">
                         <div class="imagenProductoCarrito">
-                            <img src= <%= productos[1].imagenProducto%>>
+                            <img src= <%= productos[1].imagen%>>
                         </div>
                         <div class="carrito-detallesProducto">
                             <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
@@ -27,7 +27,7 @@
                 <div class="contenedorProducto">
                     <div class="carrito-item-descripcion">
                         <div class="imagenProductoCarrito">
-                            <img src= <%= productos[1].imagenProducto%>>
+                            <img src= <%= productos[1].imagen%>>
                         </div>
                         <div class="carrito-detallesProducto">
                             <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
@@ -45,7 +45,7 @@
                 <div class="contenedorProducto">
                     <div class="carrito-item-descripcion">
                         <div class="imagenProductoCarrito">
-                            <img src= <%= productos[1].imagenProducto%>>
+                            <img src= <%= productos[1].imagen%>>
                         </div>
                         <div class="carrito-detallesProducto">
                             <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
