--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -7,14 +7,14 @@
         <div id="header-DetalleProducto">
             <div class="producto-favorito">&#9829</div>
             <div class="producto-imagen">
-                <img src= <%= productos[1].imagenProducto%> >
+                <img src= <%= productos[1].imagen%> >
             </div>
             <div class="producto-footer">
-                <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
+                <p class="producto-detalle"> <%= productos[1].descripcion%> </p>
             </div>
-            <p class="producto-presentacion"> x <%= productos[1].presentacionProducto%></p>
+            <p class="producto-presentacion"> x <%= productos[1].presentacion%></p>
             <div class="producto-precios">
-                <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
+                <p class="precio-nuestro"> <%= productos[1].precio%> </p>
                 <p class="precio-competencia"> <%= productos[1].precioCompetencia%> </p>
             </div>
         </div>
