--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -15,13 +15,13 @@
         </div>
         <div id="categorias">
             <div class="categorias">
-                 <% categories.forEach(categorie => { %>
+                 <% categories.forEach(category => { %>
                 <div class="categoria">
                     <div class="imagen-categoria">
-                        <img src= <%= categorie.iconoCategoria%> >
+                        <img src= <%= category.iconoCategoria%> >
                     </div>
                     <div class="nombre-categoria">
-                        <span id="categoria1"><%= categorie.nombreCategoria%></span>
+                        <span id="categoria1"><%= category.nombreCategoria%></span>
                     </div>
                 </div>
                 <% });%>
