--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -7,15 +7,15 @@
         <div id="header-DetalleProducto">
             <div class="producto-favorito">&#9829</div>
             <div class="producto-imagen">
-                <img src= <%= productos[1].imagen%> >
+                <img src= <%= products[1].imagen%> >
             </div>
             <div class="producto-footer">
-                <p class="producto-detalle"> <%= productos[1].descripcion%> </p>
+                <p class="producto-detalle"> <%= products[1].descripcion%> </p>
             </div>
-            <p class="producto-presentacion"> x <%= productos[1].presentacion%></p>
+            <p class="producto-presentacion"> x <%= products[1].presentacion%></p>
             <div class="producto-precios">
-                <p class="precio-nuestro"> <%= productos[1].precio%> </p>
-                <p class="precio-competencia"> <%= productos[1].precioCompetencia%> </p>
+                <p class="precio-nuestro"> <%= products[1].precio%> </p>
+                <p class="precio-competencia"> <%= products[1].precioCompetencia%> </p>
             </div>
         </div>
         <div class="producto-agregar">Agregar</div>
