arreglo de rutas

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
             <div id="carrito">
                 <div class="total-carrito"> $120.322</div>
                 <div>
-                    <img class="icono" src="./img/shoppingcart-icon.svg">
+                    <img class="icono" src="../../../img/shoppingcart-icon.svg">
                 </div>
                 <div class="circulo-rojo centrar-hijos-vertical-horizontal">
                     <div class="inline-block blanco-negrita">22</div>
